jwt authorization filter

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,5 @@ authentication.jwt.private-key=MIIEvQIBADANBgkqhkiG9w0BAQEFAASCBKcwggSjAgEAAoIBA
 
 #1 day
 authentication.jwt.expiration-in-ms=86400000
+
+spring.main.allow-circular-refereces=true
