--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.9.0'
+	implementation group: 'com.squareup.retrofit2', name: 'converter-gson', version: '2.9.0'
+	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+
 	implementation 'javax.servlet:javax.servlet-api:4.0.1' // Use the latest version available
 	//Prior to the JJWT version 0.10.0, both the API and the implementation were packaged as a single artifact, io.jsonwebtoken:jjwt.
 	//Starting with version 0.10.0, API and implementation were split in two different artifacts.
