--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,4 +22,14 @@ authentication.jwt.private-key=MIIEvQIBADANBgkqhkiG9w0BAQEFAASCBKcwggSjAgEAAoIBA
 #1 day
 authentication.jwt.expiration-in-ms=86400000
 
+# 30 seconds
+retrofit.timeout=30
+
+# should be same with other microservices
+service.security.secure-key-username=randomSecureKeyUsername!
+service.security.secure-key-password=randomSecureKeyPassword!
+
+product.service.url=http://localhost:3333/
+transaction.service.url=http://localhost:4444/
+
 spring.main.allow-circular-refereces=true
